# DBS2_gr13_1

./: .gitignore  large_file_test.txt  task3.cpp  task3_L.cpp  task3_draft.cpp
Sheet1/: .gitignore  CMakeLists.txt  README.md  task3.cpp
Sheet2/: .gitignore  block.cpp  buffer_manager.cpp
Sheet2/header/: block.h  buffer_manager.h
Sheet2_Artem/: CMakeLists.txt  block.cpp  buffer_manager.cpp  main.cpp  record.cpp
Sheet2_Artem/header/: block.h
Sheet3/: .gitignore  bptree.cpp  bptree_old.cpp  main.cpp
Sheet3/header/: block.h  buffer_manager.h  record.h
Sheet3_Artem/: CMakeLists.txt  UML.puml  bptree.cpp  buffer_manager.cpp
Sheet3_Artem/header/: bptree.h
Sheet4/: buffer_manager.cpp  record.cpp
Sheet4/header/: bptree.h  execution.h  filesystem.h  record.h
Sheet4_Artem/: execution.cpp  main.cpp
Sheet4_Artem/header/: bptree.h  buffer_manager.h  execution.h
Sheet5/: CMakeLists.txt  block.cpp
Sheet5/header/: execution.h
Sheet5_Artem/: bptree.cpp  execution.cpp  main.cpp
Sheet5_Artem/header/: execution.h
